fix dark mode heading color

--- a/css/styles.css
+++ b/css/styles.css
@@ -597,7 +597,8 @@ body.dark-mode {
 .dark-mode h1,
 .dark-mode h2,
 .dark-mode h3,
-.dark-mode p {
+.dark-mode p,
+.dark-mode a {
     color: var(--theme-text-main);
 }
 
